# scaling-guacamole

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg
.zed/: debug.json
docker/: Dockerfile  Dockerfile.dev  compose.prod.yaml  compose.yaml
docker/nginx/: dev.conf  nginx.conf
docker/scripts/: entrypoint.sh  setup-env.sh  wait-for-it.sh
docs/: ai-assistant-setup.md  architecture.md  django-commands.md  env-variables.md  production-vs-dev.md  quickstart.md  services.md
src/myproject/: health.py  urls.py
src/myproject/accounts/: admin.py  apps.py  authentication.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/myproject/accounts/tests/: factories.py  test_api.py  test_models.py  test_views.py
src/myproject/api/: apps.py  serializers.py  throttling.py  urls.py  views.py
src/myproject/api/tests/: test_endpoints.py
src/myproject/chat/: admin.py  ai_assistants.py  apps.py  models.py  urls.py  views.py
src/myproject/chat/tests/: factories.py  test_views.py
src/myproject/core/: admin.py  apps.py  context_processors.py  middleware.py  models.py
src/myproject/core/tests/: __init__.py
src/myproject/settings/: __init__.py  base.py  development.py  production.py  test.py
src/myproject/templates/: 403.html  404.html  500.html  base.html  navbar.html
src/myproject/workflows/: activities.py  admin.py  apps.py  signals.py  workflows.py
tests/: conftest.py  test_imports.py  test_settings.py  test_smoke.py
(+9 files in other folders)
